first working version with 3